modules/network/nat-gateways.tf
resource "aws_nat_gateway" "ngw" {

  count         = var.eks_nat_gateway.enable ? (var.eks_eip.enable_eip ? length(aws_eip.solace_eip) : length(var.eks_nat_gateway.vpc_nat_gw_eip_allocation_ids)) : 0
  allocation_id = var.eks_eip.enable_eip ? aws_eip.solace_eip[count.index].association_id : var.eks_nat_gateway.vpc_nat_gw_eip_allocation_ids[count.index]
  subnet_id     = aws_subnet.public_subnets[count.index].id

  tags = {
    Name = "${var.vpc_name}-ngw-${var.az_map[count.index]}"
  }

  /*data "aws_eip" "nat_gw_public_ips" {
    count = length(var.vpc_nat_gw_eip_allocation_ids)
    id    = var.vpc_nat_gw_eip_allocation_ids[count.index]
  }
  */
}
